--- a/platforms/android/assets/www/app/views/viewHeader.html
+++ b/platforms/android/assets/www/app/views/viewHeader.html
@@ -1,66 +1,33 @@
-<header class="navheader " role="banner" ng-swipe-right="actionSwipeRight($event)">
-	<nav class="navbar navbar-main navbar-inverse navbar-fixed-top">
-		<div class="container-fluid">
-			<div class="navbar-header">
-				<button type="button" class="navbar-toggle collapsed menu-button" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-					<span class="sr-only">Toggle navigation</span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</button>
-				<!-- <button class="refresh-button" ng-click="refresh()">Refresh</button> -->
-				<img class="refresh-button" ng-click="refresh()" ng-src="images/reload.png" alt="refresh"></img>
-				<a class="navbar-brand" href="#/home" data-target="#home" id="logo" alt="logo"></a>
-			</div> 
-			
-			
-		 	<div id="navbar" class="navbar-collapse collapse navbar-right">
-				<ul class="nav navbar-nav">
-					<li ng-repeat="data in headerData" ng-style="{'background-color': data.colorCode}" >
-						<a href="" ng-click="selectCategory(data)">{{data.displayName}}</a>
-					</li>
-					<!--<li ng-repeat="data in headerData" class="divider"></li> // Commented this line creating empty lines-->
-					<li class="dropdown" id="menu_categories" ng-show="showMoreCategories">
-						<a href="#/" data-target="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">More Categories <span class="caret"></span></a>
-						<ul class="dropdown-menu" role="menu">
-							<li ng-repeat="data in moreCategories" class="{{data.idName}}">
-								<a href="" ng-click="selectCategory(data)">{{data.displayName}}</a>
-							</li>
-						</ul>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-
-	<!-- <nav>
-        <ul class="list-unstyled main-menu">
-          <li><a href="#">Menu One <span class="icon"></span></a></li>
-          <li><a href="#">Menu Two <span class="icon"></span></a></li>
-          <li><a href="#">Menu Three <span class="icon"></span></a></li>
-          <li><a href="#">Dropdown</a>
-            <ul class="list-unstyled">
-                <li class="sub-nav"><a href="#">Sub Menu One <span class="icon"></span></a></li>
-                <li class="sub-nav"><a href="#">Sub Menu Two <span class="icon"></span></a></li>
-                <li class="sub-nav"><a href="#">Sub Menu Three <span class="icon"></span></a></li>
-                <li class="sub-nav"><a href="#">Sub Menu Four <span class="icon"></span></a></li>
-                <li class="sub-nav"><a href="#">Sub Menu Five <span class="icon"></span></a></li>
-            </ul>
-          </li>
-          <li><a href="#">Menu Four <span class="icon"></span></a></li>
-          <li><a href="#">Menu Five <span class="icon"></span></a></li>
-        </ul>
-      </nav>
-          
-    <div class="navbar navbar-inverse navbar-fixed-top">      
-        
-        
-        <a class="navbar-brand" href="#home" id="logo" alt="logo"></a>
-        <div class="navbar-header pull-right">
-          <a id="nav-expander" class="nav-expander fixed">
-            <i class="fa fa-bars fa-lg white"></i>
-          </a>
+    <div class="custom-header" id="custom-navbar">
+    	<div id="nav-icon2">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
-    </div> -->
+        <img class="refresh-button" ng-click="refresh()" ng-src="images/reload.png" alt="refresh">
+    	<a class="navbar-brand" id="logo" alt="logo"></a>
 
-</header>
+        <div class="sliding-menu flex-center-wrapper flex-column left-menu">
+        <ul>
+            <li ng-repeat="data in headerData">
+                        <a href="" ng-click="selectCategory(data)"><span ng-style="{'background-color': data.colorCode}"></span>{{data.displayName}}</a>
+                    </li>
+                    <!--<li ng-repeat="data in headerData" class="divider"></li> // Commented this line creating empty lines-->
+                    <li class="dropdown" id="menu_categories" ng-show="showMoreCategories">
+                        <a href="#/" data-target="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">More Categories <span class="caret"></span></a>
+                        <ul class="dropdown-menu" role="menu">
+                            <li ng-repeat="data in moreCategories" class="{{data.idName}}">
+                                <a href="" ng-click="selectCategory(data)">{{data.displayName}}</a>
+                            </li>
+                        </ul>
+                    </li>
+        </ul>
+        <span class="menu-logo"></span>
+        <span class="sliiider-exit exit left-exit">&#215</span>
+    </div>
+    </div>
+
+   
