--- a/platforms/android/assets/www/app/views/viewHome.html
+++ b/platforms/android/assets/www/app/views/viewHome.html
@@ -1,42 +1,39 @@
-<div class="container-fluid main-home-class" ng-show="isMainScreen" style="background-color: rgb(216,237,248)">
-	<div ng-if="noData == false"  class="row categoryInfo_bar">
-		<!-- <div class="col-xs-6 navTxtTopPadding" id="index_breakingNews"><h4 style="font-weight: bold;">Breaking News</h4></div> -->
-		<div class="navTxtTopPadding" id="index_breakingNews"><h4 style="font-weight: bold;">HIGHLIGHTS</h4></div>
-		<div class="txtCenter floatR"  >
-				<div class="btn-group btn-toggle pull-right marginT8">
-					<button class="btn btn-xs" ng-class="{'btn-primary active': !isTextOnly}" id="show_images_home" ng-click="toggleTextMode(false)">Images</button>
-					<button class="btn btn-xs" ng-class="{'btn-primary active': isTextOnly}" id="hide_images_home" ng-click="toggleTextMode(true)" >Text</button>
-				</div>
+<!--<div class="container-fluid main-home-class" ng-show="isMainScreen" style="background-color: rgb(216,237,248)">-->
+	<!--<div ng-if="noData == false"  class="row categoryInfo_bar">-->
+		<!--<div class="navTxtTopPadding" id="index_breakingNews"><h4 style="font-weight: bold;">HIGHLIGHTS</h4></div>-->
+		<!--<div class="txtCenter floatR">-->
+			<!--<div class="btn-group btn-toggle pull-right marginT8">-->
+				<!--<button class="btn btn-xs" ng-class="{'btn-primary active': !isTextOnly}" id="show_images_home" ng-click="toggleTextMode(false)">Images</button>-->
+				<!--<button class="btn btn-xs" ng-class="{'btn-primary active': isTextOnly}" id="hide_images_home" ng-click="toggleTextMode(true)" >Text</button>-->
+			<!--</div>-->
+        <!--</div>-->
+	<!--</div>-->
+<!--</div>-->
+<div class="clearFix"></div>
+<section id="main-slider" ng-show="isMainScreen" class="row no-margin main-home-class" style="margin-top: -80px" >
+	<div class="">
+		<div class="row" id="carousel-row" >
+			<div class="col-lg-12 col-md-12" style="padding: 0px;margin: 0px;">
+                <div class="resp-slick-slide" ng-class="{'text-mode': isTextOnly}">
+                    <slick class="slick-main home-page" settings="slickConfig" ng-if="slickConfigLoaded">
+                        <div class="slide-main" ng-repeat="data in breakingNews track by $index">
+                            <div class=" response-img">
+                               	<!--<div class="bgImageContainer" ng-style="{'background-image': 'url({{data.image.sort}})'}"></div>-->
+                                <div class="container-img-slide">
+                    				<div ng-if="isTextOnly" class="news-title">
+										<p class="text-left news-para">{{data.description}}</p>
+									</div>
+                                    <img ng-if="!isTextOnly" ng-src="{{data.image.sort}}" width="100%">
+                                </div>
+                            </div>
+                            <h4 class="pos-abs" ng-bind-html="deliberatelyTrustDangerousSnippet(data.title)" ng-click="selectNewsItem(data,$index)"></h4>
+                        </div>
+                    </slick>
+                </div>
 			</div>
 		</div>
 	</div>
-	<div class="clearFix"></div>
-	<section id="main-slider" ng-show="isMainScreen" class="row no-margin main-home-class" >
-		<div class="container-fluid">
-			<div class="row" id="carousel-row" >
-				<div class="col-lg-12 col-md-12" style="padding: 0px;margin: 0px;">
-                    <div class="resp-slick-slide" ng-class="{'text-mode': isTextOnly}">
-                        <slick class="slick-main home-page" settings="slickConfig" ng-if="slickConfigLoaded">
-                            <div class="slide-main" ng-repeat="data in breakingNews track by $index">
-                                <div class=" response-img">
-                                	<div class="bgImageContainer" ng-style="{'background-image': 'url({{data.image.sort}})'}">
-									</div>
-                                    <div class="container-img-slide">
-                    					<div ng-if="isTextOnly" class="news-title">
-											<p class="text-left news-para">{{data.description}}</p>
-										</div>
-                                        <img ng-if="!isTextOnly" ng-src="{{data.image.sort}}" width="100%">
-                                    </div>
-                                </div>
-                                <h4 class="pos-abs" ng-bind-html="deliberatelyTrustDangerousSnippet(data.title)" ng-click="selectNewsItem(data,$index)"></h4>
-                            </div>
-                        </slick>
-                    </div>
-
-				</div>
-			</div>
-		</div>
-	</section>
+</section>
 <section id="categorynews_area" class="row mainContent" >
 	<div ng-if="noData == true" class="nodata">No Data Available. Please check the internet connect and try again.</div>
 	<div ng-repeat="data in homePagedata" class="col-xs-6 col-sm-4 col-md-4 col-lg-3 thumb news_click column" ng-click="selectNews(data, $index)" >
@@ -52,7 +49,6 @@
 				<img ng-if="!isTextOnly" class="news_images_home img-responsive" ng-src="{{data.image.sort}}" />
 				<div class="col-xs-10 col-sm-10  col-md-10 text-left index_news_caption"  dotdotdot>
 					<span>{{data.title}}</span>
-					<!-- <p style="height:30px; word-wrap: break-word;" class="ellipsisTxt" >Hokey Pokey ice cream review: It’s all about funky wordplay and an immersive experience</p> -->
 				</div>
 			</div>
 		</div>
