--- a/www/app/views/viewCategory.html
+++ b/www/app/views/viewCategory.html
@@ -9,18 +9,20 @@
 			</div>
 		</div>
 	</div> -->
-	<div class="categoryInfo_bar1"   ng-style="{'background-color': categoryColor}">
-	 	<div class="imageTextBtn1 textcenter"> <span id="category_title" >{{categoryTitle}}</span> </div>
+	<div class="categoryInfo_bar1"   >
+	 	<div class="imageTextBtn1 textcenter">
+            <span id="category_title" ng-style="{'color': categoryColor}">{{categoryTitle}}</span>
+            <!--<span id="category_title" ng-style="{'background-color': categoryColor}">{{categoryTitle}}</span>-->
+        </div>
 		<div class="imageTextBtn1 ">
 			<div class="btn-group btn-toggle pull-right">
 				<button class="btn btn-xs" ng-class="{'btn-primary active': !isTextOnly}" id="show_images_home" ng-click="toggleTextMode(false)">Images</button>
 				<button class="btn btn-xs" ng-class="{'btn-primary active': isTextOnly}" id="hide_images_home" ng-click="toggleTextMode(true)" >Text</button>
 			</div>
 		</div>
-		<div class="imageTextBtn1 backbtn">
-				<a  id="back_main" href="" ng-click="backBtn()" ng-style="{'color': white}" >
-				Back</a>
-			</div>
+		<!--<div class="imageTextBtn1 backbtn">-->
+			<!--<a  id="back_main" href="" ng-click="backBtn()" ng-style="{'color': white}"></a>-->
+		<!--</div>-->
 	</div>
 	<div class="clearFix"></div>
 	
@@ -70,10 +72,6 @@
 	</div>
 </section>
 <script>
-/*  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');*/
 
   
 </script>
